edit some features
