# internal/rest/profile.go
@@ -18,6 +18,7 @@ type ProfileService interface {
 	Profile(ctx context.Context, token string) (domain.Profile, error)
 	ChangePassword(ctx context.Context, token string, newPassword string) error
 	ChangeEmail(ctx context.Context, token string, newEmail string) error
+	ChangePhone(ctx context.Context, token string, newPhone string) error
 }
 
 // NewProfileHandler initializes the profile handler with the given service and routes.
@@ -29,6 +30,7 @@ func NewProfileHandler(e *echo.Echo, svc ProfileService) {
 	profileGroup.GET("", handler.Profile)
 	profileGroup.POST("/change-password", handler.ChangePassword)
 	profileGroup.POST("/change-email", handler.ChangeEmail)
+	profileGroup.POST("/change-phone", handler.ChangePhone)
 }
 
 // GetProfile handles the GET /profile endpoint.
@@ -134,13 +136,23 @@ func (h *ProfileHandler) ChangePassword(c echo.Context) error {
 // @Failure 500 {object} ResponseError "Internal server error"
 // @Router /api/v1/profile/change-email [post]
 func (h *ProfileHandler) ChangeEmail(c echo.Context) error {
-	token := c.Request().Header.Get("Authorization")
-	if token == "" {
+	// Extract the Authorization header
+	authHeader := c.Request().Header.Get("Authorization")
+	if authHeader == "" {
 		return c.JSON(http.StatusUnauthorized, ResponseError{
 			Message: "Authorization token is required",
 		})
 	}
 
+	// Check if the header starts with "Bearer "
+	const bearerPrefix = "Bearer "
+
+	token := strings.TrimSpace(strings.TrimPrefix(authHeader, bearerPrefix))
+	if token == "" {
+		return c.JSON(http.StatusUnauthorized, ResponseError{
+			Message: "Invalid token",
+		})
+	}
 	var payload struct {
 		NewEmail string `json:"new_email"`
 	}
@@ -161,5 +173,59 @@ func (h *ProfileHandler) ChangeEmail(c echo.Context) error {
 	// Respond with success
 	return c.JSON(http.StatusOK, map[string]string{
 		"message": "Email changed successfully",
+	})
+}
+
+// ChangePhone handles the POST /profile/change-phone endpoint.
+// @Summary Change user phone
+// @Description Change the email for the authenticated user
+// @Tags Profile
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Authorization token (Bearer <token>)"
+// @Param new_email body string true "New phone"
+// @Success 200 {object} map[string]string "phone changed successfully"
+// @Failure 400 {object} ResponseError "Invalid request payload"
+// @Failure 401 {object} ResponseError "Unauthorized"
+// @Failure 500 {object} ResponseError "Internal server error"
+// @Router /api/v1/profile/change-phone [post]
+func (h *ProfileHandler) ChangePhone(c echo.Context) error {
+	// Extract the Authorization header
+	authHeader := c.Request().Header.Get("Authorization")
+	if authHeader == "" {
+		return c.JSON(http.StatusUnauthorized, ResponseError{
+			Message: "Authorization token is required",
+		})
+	}
+
+	// Check if the header starts with "Bearer "
+	const bearerPrefix = "Bearer "
+
+	token := strings.TrimSpace(strings.TrimPrefix(authHeader, bearerPrefix))
+	if token == "" {
+		return c.JSON(http.StatusUnauthorized, ResponseError{
+			Message: "Invalid token",
+		})
+	}
+	var payload struct {
+		NewPhone string `json:"new_phone"`
+	}
+
+	// Bind the request payload
+	if err := c.Bind(&payload); err != nil {
+		return c.JSON(http.StatusBadRequest, ResponseError{
+			Message: "Invalid request payload",
+		})
+	}
+
+	// Attempt to change the email
+	err := h.Service.ChangePhone(c.Request().Context(), token, payload.NewPhone)
+	if err != nil {
+		return handleError(c, err)
+	}
+
+	// Respond with success
+	return c.JSON(http.StatusOK, map[string]string{
+		"message": "Phone changed successfully",
 	})
 }
